# DAPI

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONVENTIONS.md  TODO.md  alembic.ini  main.py  pyproject.toml
.github/workflows/: master.yml
alembic/: env.py
app/: annotations.py  main.py  settings.py
app/auth/: dependencies.py  router.py  security.py
app/database/: __init__.py  base.py  core.py  dependencies.py
app/todo/: dependencies.py  docs.py  filters.py  models.py  repository.py  router.py  schemas.py  services.py
app/users/: models.py  repository.py  router.py  schemas.py
tests/: conftest.py  test_exceptions.py  test_modules.py  test_pagination.py  test_services.py
tests/test_database/: test_mixins.py  test_respository.py
tests/test_filters/: test_core.py  test_param_functions.py  test_params.py
tests/test_schemas/: test_docs.py
utils/: README.md  __init__.py  auth.py  crypt.py  datetime.py  exception_handlers.py  exceptions.py  filters.py  middleware.py  pagination.py  responses.py  services.py
utils/database/: dependencies.py  mixins.py  models.py  repository.py  repository_v2.py
utils/exceptions/: client.py
utils/filters/: __init__.py  core.py  param_functions.py  params.py  schemas.py
utils/pagination/: schemas.py
utils/schemas/: database.py  filters.py
