[tool.poetry]
name = "todo3"
version = "0.1.1"
description = ""
authors = ["Jordy Cuan <jcuan4@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.101.1"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.20"
passlib = "^1.7.4"
bcrypt = "^4.0.1"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
psycopg2-binary = "^2.9.6"
alembic = "^1.11.2"
pytz = "^2023.3"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"
bandit = "^1.7.5"
black = "^23.3.0"
mypy = "^1.2.0"
pre-commit = "^3.2.2"
isort = "^5.12.0"
pytest = "^7.4.0"
hypothesis = "^6.82.4"
pytest-cov = "^4.1.0"

[tool.isort]
profile = "black"
line_length = 110

[tool.black]
line-length = 110

[tool.mypy]
plugins = [
  "pydantic.mypy"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.flake8]
extend-ignore = "E203"

[flake8]
extend-ignore = "E203"

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
]
xfail_strict = true
python_functions = ["test_*"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
