[project]
name = "todo3"
version = "0.1.1"
description = ""
authors = [
    {name = "Jordy Cuan", email = "jcuan4@gmail.com"},
]
readme = "README.md"

requires-python = "~=3.10"
dependencies = [
    "alembic~=1.11",
    "bcrypt~=4.0",
    "fastapi~=0.103.0",
    "httpx~=0.23.0",
    "passlib~=1.7",
    "psycopg2-binary~=2.9",
    "pydantic-settings~=2.0",
    "python-jose[cryptography]~=3.3",
    "python-multipart~=0.0.6",
    "pytz~=2023.3",
    "sqlalchemy~=2.0",
]


[tool.pdm.dev-dependencies]
develop = [
    "bandit>=1.7.5",
    "black>=23.7.0",
    "flake8>=6.1.0",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "pre-commit>=3.3.3",
]
testing = [
    "pytest-cov~=4.1",
    "pytest~=7.4",
]

[tool.isort]
profile = "black"
line_length = 110

[tool.bandit]
exclude_dirs = ["tests", ".venv", "__pycache__"]

[tool.black]
line-length = 110

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
python_version = "3.10"
follow_imports = "skip"

# Settings utils
[[tool.mypy.overrides]]
module = "utils.*"
strict = true

# Settings app
[[tool.mypy.overrides]]
module = "app.*"
strict = false

# Settings tests
[[tool.mypy.overrides]]
module = "tests.*"
strict = false


[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.flake8]
ignore = ["E203", "W503", "F403"]
max-line-length = 110
max-complexity = 10
exclude = [
    "venv",
    "__pycache__",
]

[tool.pytest.ini_options]
addopts = [
  "--strict-config",
  "--strict-markers",
  "--disable-pytest-warnings",
]
xfail_strict = true
python_functions = ["test_*"]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"
